# vglib.github.io

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  compile_shaders.bat  conanfile.txt
BulletPhysicsPlugin/: CMakeLists.txt
BulletPhysicsPlugin/include/: BulletPhysicsPlugin.hpp  DebugDrawer.hpp  glm_bullet_interpreter.hpp
BulletPhysicsPlugin/source/: BulletPhysicsPlugin.cpp  DebugDrawer.cpp
ImGuiPlugin/: CMakeLists.txt
ImGuiPlugin/include/: ImGuiPlugin.hpp  ImGuiShaders.hpp
ImGuiPlugin/source/: ImGuiPlugin.cpp  implot_items.cpp
VulkanBase/: CMakeLists.txt
VulkanBase/include/: AbstractCamera.hpp  Barrier.hpp  BatchSubmission.hpp  BlendFactor.hpp  BlendOp.hpp  Builder.hpp  Camera.h  Canvas.hpp  ColorBlendStateBuilder.hpp  ComputePipelins.hpp  DepthStencilStateBuilder.hpp  DescriptorSetBuilder.hpp  DynamicRenderPassBuilder.hpp  DynamicStateBuilder.hpp  Entity.hpp  ExtensionChain.hpp  FirstPersonCamera.h  FlightCamera.h  FourWayRadixSort.hpp  GpuProfiler.hpp  GraphicsPipelineBuilder.hpp  InputAssemblyStateBuilder.hpp  InputManager.h  IsSorted.hpp  LogicOp.hpp  Mesh.h  MultisampleStateBuilder.hpp  OrbitingCamera.h  OrderChecker.hpp  ParticleSystem.hpp  Phong.h  PipelineLayoutBuilder.hpp  Plugin.hpp  PointHashGrid.hpp  PrefixSum.hpp  Profiler.hpp  Prototypes.hpp  RasterizationStateBuilder.hpp  RefCounted.hpp  ResourcePool.hpp  (+64 more)
VulkanBase/include/atmosphere/: Atmosphere.hpp  AtmosphereContants.hpp  AtmosphereDescriptor.hpp  AtmosphereGenerator.hpp
VulkanBase/include/fluid/: Field.hpp  FieldVisualizer.hpp  FluidSolver2.hpp
VulkanBase/include/gpu/: HashMap.hpp  HashSet.hpp  HashTable.hpp
VulkanBase/include/plugins/: BindLessDescriptorPlugin.hpp
VulkanBase/include/spectrum/: spectrum.hpp
VulkanBase/include/utility/: SequenceGenerator.hpp  dft.hpp  filemanager.hpp  vbmath.h
VulkanBase/source/: Atmosphere.cpp  AtmosphereDescriptor.cpp  AtmosphereGenerator.cpp  Barrier.cpp  Camera.cpp  Canvas.cpp  ColorBlendStateBuilder.cpp  ComputePipelines.cpp  DepthStencilStateBuilder.cpp  DescriptorSetLayoutBuilder.cpp  DynamicRenderPassBuilder.cpp  DynamicStateBuilder.cpp  FieldVisualizer.cpp  FirstPersonCamera.cpp  FlightCamera.cpp  FluidSolver2.cpp  FourWayRadixSort.cpp  GraphicsPipelineBuilder.cpp  HashTable.cpp  InputAssemblyStateBuilder.cpp  IsSorted.cpp  Mesh.cpp  MultisampleStateBuilder.cpp  OrbitingCamera.cpp  OrderChecker.cpp  ParticleSystem.cpp  Phong.cpp  PipelineLayoutBuilder.cpp  Plugin.cpp  PointHashGrid.cpp  PrefixSum.cpp  RasterizationStateBuilder.cpp  RefCounted.cpp  ShaderStageBuilder.cpp  SkyBox.cpp  Sort.cpp  TessellationStateBuilder.cpp  Texture.cpp  ThreadPool.cpp  VertexInputStateBuilder.cpp  (+32 more)
VulkanBase/tests/: BoxSurfaceFixture.hpp  BoxSurfaceTest.cpp  ComputeShaderTest.cpp  Cuckoo.hpp  DeviceLinkedListTest.cpp  FindIntervalFixture.cpp  ForWayRadixLocalSort.cpp  FourWayRadixSortTest.cpp  GpuAlgorithms.cpp  HashSetFixture.cpp  HashTableFixture.cpp  InSideFrustumTest.cpp  IsSortedTest.cpp  OrderCheckerTest.cpp  PointHashGridBuilderTest.cpp  PrefixScanTest.cpp  RadixSortTest.cpp  RefCountTest.cpp  RessourcePoolTest.cpp  SortFixture.hpp  StaggeredGridTest.cpp  TestUtils.hpp  VulkanFixture.hpp  VulkanInitialization.cpp  main.cpp  sample_test.cpp  test_hash_set_insert.comp  test_hash_set_query.comp  test_hash_set_remove_duplicates.comp  test_hash_table_insert.comp  test_hash_table_query.comp  vma_impl.cpp
camera/: CMakeLists.txt
camera/include/: camera_v2.hpp  cameras.hpp  input.hpp  movement.hpp  xforms_v2.h
camera/source/: camera_v2.cpp  input.cpp  movement.cpp
cmake/: FindOptiX.cmake  setup.cmake  utilities.cmake
cmake/FindCUDA/: run_nvcc.cmake
data/shaders/: barycenter.frag  barycenter.vert  bit_flip.comp  blur.comp  blur.frag  blur2.comp  bounding_box.glsl  clipspace.frag  clipspace.vert  compute.glsl  crash.comp  draw_normals.geom  draw_normals.vert  flat.frag  flat.vert  frustum_cull.glsl  glsl_cpp_bridge.glsl  grid.frag  grid.vert  hash.glsl  less_than.comp  less_than_equal.comp  octahedral.glsl  order_checking.comp  order_checking_add.comp  pass_through.comp  pass_through.vert  perlin_worley_3d.comp  point.vert  quad.frag  random.glsl  ray_query_lang.glsl  ray_traced_shadows.glsl  ray_tracing_common.glsl  ray_tracing_lang.glsl  sequence.comp  triangle.frag  triangle.vert
examples/: CMakeLists.txt
examples/Cloth/: CMakeLists.txt
examples/ComputeDemo/: CMakeLists.txt
examples/Demo/: CMakeLists.txt
examples/FontTest/: CMakeLists.txt
examples/ImGuiDemo/: CMakeLists.txt
examples/MarchingCubes/: CMakeLists.txt
examples/MeshLoading/: CMakeLists.txt
examples/Playground/: CMakeLists.txt  drawImage.cpp  drawImage.h  fft.hpp  hexdump.h  namespaceAlias.h  openexr_eval.h  playground.cpp
examples/Primitives/: CMakeLists.txt
examples/RayTracerDemo/: CMakeLists.txt
examples/RayTracingImplicits/: CMakeLists.txt
examples/VulkanCube/: CMakeLists.txt
examples/VulkanCubeInstanced/: CMakeLists.txt
examples/atmospheric_scattering/: CMakeLists.txt  README.md
examples/atmospheric_scattering2/: CMakeLists.txt
examples/bloom/: CMakeLists.txt
examples/bulletphysicsdemo/: CMakeLists.txt  README.md
examples/collision_detection/: CMakeLists.txt
examples/color_space/: CMakeLists.txt
examples/convex_decomposition/: CMakeLists.txt
examples/cuda_eval/: CMakeLists.txt  gpu_info.cu
examples/open_vdb_viewer/: CMakeLists.txt
examples/open_vdb_viewer/include/: L2DFileDialog.h  OpenVdbViewer.hpp
examples/open_vdb_viewer/shaders/: background.frag  delta_tracking.frag  linear_blur.comp  path_tracing.frag  random.glsl  ray_marcher.frag  screen.frag  screen.vert  slice.frag  slice.geom  slice.vert  volume.frag  volume.vert
examples/open_vdb_viewer/source/: OpenVdbViewer.cpp
pkg/: conanfile.py
profiling/: CMakeLists.txt
profiling/src/: BasePerformance.hpp  Console.hpp  OrderCheckingPerformanceTest.hpp  RadixSortOrderCheckingPerformance.hpp  RadixSortPerformance.hpp  RadixSortPerformanceBase.hpp  RingBuffer.hpp  main.cpp
scripts/: CMakeLists.txt  compile_shaders.hpp  compile_shaders.py  main.cpp
(+458 files in other folders)
